# simplex-23d-rs

./: Cargo.toml  README.md
benches/: simplex_benchmark.rs
src/: lib.rs  tests.rs
